--- a/README
+++ b/README
@@ -1,7 +1,10 @@
-<<<<<<< HEAD
+
 This is readme
 =======
 Online Ticket Reservation System (OTRS)
 
-เป็นระบบจองตั๋วออนไลน์ผ่านหน้าเว็บโดยใช้ภาษา Go ในการพัฒนาเป็นหลัก
->>>>>>> ea305c9169b8757582d05307c6aa200c04ead1e6
+เป็นระบบจองตั๋วออนไลน์ผ่านหน้าเว็บโดยใช้ภาษา Go ในการพัฒนาเป็นหลัก และใช้งานร่วมกับ Google App Engine
+
+*หมายเหตุ : Code ที่ใช้บน App Engine จะอยู่ใน src/myapp
+
+
